--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -133,7 +133,8 @@
                     Model.ExtensionList,
                     Model.ITHeadDocumentsUploaderModels,
                     Model.ITHeadSpecialIncomeModels,
-                    Model.ITReturnExtensionListModels))
+                    Model.ITReturnExtensionListModels,
+                    Model.RefundDetailsListModels))
             }
             if (itHead == "IncomeFromOtherSources")
             {
