Fixed the style issue

--- a/LitigationSoftware/LSWebApp/Views/Shared/_RefundDetailsList.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/Shared/_RefundDetailsList.cshtml
@@ -47,7 +47,7 @@
                                                     , new
                                                     {
                                                         @class = "ddFYAYRefundDetails",
-                                                        @style = "width:150px;"
+                                                        @style = "width:150px;height:27px;"
                                                     })
                                     </td>
                                     <td>
@@ -71,7 +71,7 @@
                                                              : string.Empty
                                                           , new
                                                           {
-                                                              @class = "form-control RefundDetailsDate",
+                                                              @class = "RefundDetailsDate",
                                                               @size = "16",
                                                               @value = "",
                                                               @id = "RefundDetailsDate_" + item.Id.ToString()
