--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITHeadDetails.cshtml
@@ -103,12 +103,14 @@
             @if (Model.ITReturnDetailsObject.Id > 0
                 && Model.ITHeadMasterList[Model.ITHead].CanAddDocuments)
             {
-                <a href="#myModal_0" role="button" class="btn" data-toggle="modal">
+                @Html.Partial("_ITHeadDocumentsUploader"
+                , Model.ITHeadDocumentsUploaderModels[Model.ITHead])
+                @*<a href="#myModal_0" role="button" class="btn" data-toggle="modal">
                     <img src="~/images/upload.png"
                          class="imgITHeadDocumentsUploader"
                          title="click to upload the documents"
                          style="width:20px;height:20px;" />
-                </a>
+                </a>*@
             }
 
             @if (!Model.ITReturnDetailsObject.IsReturn
@@ -408,7 +410,7 @@
                         : string.Empty
                         , new
                         {
-                            @size = "16",
+                            @size = "12",
                             @value = ""
                         })
                         <span class="input-group-addon">
