--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetailsData.cshtml
@@ -28,7 +28,7 @@
                             @Html.HiddenFor(m => m.ITReturnDetailsObject.FYAYID
                                 , Model.ITReturnDetailsObject.FYAYID)
                             @Model.ITReturnDetailsObject.ITSectionCategoryDesc
-                            
+
                             @Html.Partial("_ITHeadDocumentsUploader", Model.ITHeadDocumentsUploaderModel)
 
                         </div>
@@ -56,11 +56,11 @@
                 <td>3</td>
                 <td></td>
                 @if (Model.ITReturnDetailsObject.ITSectionCategoryID == 1)
-            {
-            <td>Date of filing the return</td> }
-            else
-            {
-            <td>Date of filing the order</td>}
+                {
+                    <td>Date of filing the return</td> }
+                else
+                {
+                    <td>Date of filing the order</td>}
                 <td>
                     <div class="row col-12">
                         <div class="col-md-8">
@@ -86,77 +86,83 @@
                 </td>
             </tr>
             @if (Model.ITReturnDetailsObject.ITSectionCategoryID == 1)
-        {
-        <tr>
-            <td></td>
-            <td></td>
-            <td>Due date of filing the return</td>
-            <td>
-                <div class="row col-12">
-                    <div class="col-md-8">
-                        <div class="input-group date form_datetime HLV_clacInput"
-                             data-date="" data-date-format="dd M yyyy" data-link-field="ITReturnDetailsObject_ITReturnDueDate"
-                             data-link-format="dd M yyyy">
-                            @Html.TextBoxFor(m => m.ITReturnDetailsObject.ITReturnDueDate
-                                       , Model.ITReturnDetailsObject.ITReturnDueDate.HasValue
-                                          ? Model.ITReturnDetailsObject.ITReturnDueDate.Value.ToString("dd MMM yyyy")
-                                          : string.Empty
-                                       , new
-                                       {
-                                           @size = "16",
-                                           @value = ""
-                                       })
-                            <span class="input-group-addon">
-                                &nbsp;&nbsp;<i class="fa fa-calendar fa-2x" aria-hidden="true">
-                                </i>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        }
-            @foreach (var itHead in Model.ItemsWithAmounts)
-        {
-            if (
-               (Model.ITReturnDetailsObject.ITSectionCategoryID == 1
-               && Model.ITHeadMasterList[itHead].IsROI)
-                ||
-                (Model.ITReturnDetailsObject.ITSectionCategoryID != 1)
-               )
-            {
-                @Html.Partial("ITHeadDetails", new ITHeadDetailsModel(itHead,
-                    Model.ITHeadMasterList,
-                    Model.ITReturnDetailsObject,
-                    Model.ExtensionList,
-                    Model.ITHeadDocumentsUploaderModels,
-                    Model.ITHeadSpecialIncomeModels,
-                    Model.ITReturnExtensionListModels,
-                    Model.RefundDetailsListModels))
-            }
-            if (itHead == "IncomeFromOtherSources")
             {
                 <tr>
-                    <td>
-                        @Model.ITHeadMasterList["Broughtforwardlosses"].ExcelSrNo
-                    </td>
                     <td></td>
-                    <td>
-                        @Model.ITHeadMasterList["Broughtforwardlosses"].Description:-
-                    </td>
+                    <td></td>
+                    <td>Due date of filing the return</td>
                     <td>
                         <div class="row col-12">
-                            <div class="col-md-6">
-                                @Html.RadioButtonFor(m => m.ITReturnDetailsObject.Broughtforwardlosses
-                                        , true, Model.ITReturnDetailsObject.Broughtforwardlosses)@Html.Label("Yes")
-                                        @Html.RadioButtonFor(m => m.ITReturnDetailsObject.Broughtforwardlosses
-                                        , false, Model.ITReturnDetailsObject.Broughtforwardlosses)@Html.Label("No")
-                                    </div>
+                            <div class="col-md-8">
+                                <div class="input-group date form_datetime HLV_clacInput"
+                                     data-date="" data-date-format="dd M yyyy" data-link-field="ITReturnDetailsObject_ITReturnDueDate"
+                                     data-link-format="dd M yyyy">
+                                    @Html.TextBoxFor(m => m.ITReturnDetailsObject.ITReturnDueDate
+                                               , Model.ITReturnDetailsObject.ITReturnDueDate.HasValue
+                                                  ? Model.ITReturnDetailsObject.ITReturnDueDate.Value.ToString("dd MMM yyyy")
+                                                  : string.Empty
+                                               , new
+                                               {
+                                                   @size = "16",
+                                                   @value = ""
+                                               })
+                                    <span class="input-group-addon">
+                                        &nbsp;&nbsp;<i class="fa fa-calendar fa-2x" aria-hidden="true">
+                                        </i>
+                                    </span>
                                 </div>
-                            </td>
-                        </tr>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
             }
-        }
+            @foreach (var itHead in Model.ItemsWithAmounts)
+            {
+                if (
+                   (Model.ITReturnDetailsObject.ITSectionCategoryID == 1
+                   && Model.ITHeadMasterList[itHead].IsROI)
+                    ||
+                    (Model.ITReturnDetailsObject.ITSectionCategoryID != 1)
+                   )
+                {
+                    @Html.Partial("ITHeadDetails", new ITHeadDetailsModel(itHead,
+                        Model.ITHeadMasterList,
+                        Model.ITReturnDetailsObject,
+                        Model.ExtensionList,
+                        Model.ITHeadDocumentsUploaderModels,
+                        Model.ITHeadSpecialIncomeModels,
+                        Model.ITReturnExtensionListModels,
+                        Model.RefundDetailsListModels))
+                }
+                if (itHead == "IncomeFromOtherSources")
+                {
+                    <tr>
+                        <td>
+                            @Model.ITHeadMasterList["Broughtforwardlosses"].ExcelSrNo
+                        </td>
+                        <td></td>
+                        <td>
+                            @Model.ITHeadMasterList["Broughtforwardlosses"].Description:-
+                        </td>
+                        <td>
+                            <div class="row col-12">
+                                <div class="col-md-6">
+                                    @Html.RadioButtonFor(m => m.ITReturnDetailsObject.Broughtforwardlosses
+                                            , true, new { @class = "rbgroup" } )@Html.Label("Yes")
+                                    @Html.RadioButtonFor(m => m.ITReturnDetailsObject.Broughtforwardlosses
+                                            , false, new { @class = "rbgroup" })@Html.Label("No")
+                                        </div>
+                                    </div>
+                            <div>
+                                @if(Model.ITReturnDetailsObject.Broughtforwardlosses==true)
+                                {
+                                    @Html.ActionLink("Edit", "BusinessLossDetails")
+                                }
+                            </div>
+                        </td>
+                        </tr>
+                        }
+                    }
             <tr>
                 <td colspan="4" align="center">
                     <button type="submit" class="btn btn-primary">
@@ -167,3 +173,5 @@
         </tbody>
     </table>
 }
+
+
